--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="section-paragrapgh">
      <span class="short-1"> Quick list </span> <span class="short-2">of Our </span> <span class="short-3"> Features</span> <span class="short-4"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</span>
          </div>
-    <button class="btn" >Explore More</button>
+    <button class="btn2" >Explore More</button>
 
 
 
@@ -115,7 +115,7 @@
 
 </div>
 
-<button class="btn2">10+ Years<br><span class="experience">Experience</span></button>
+<button class="btn3">10+ Years<br><span class="experience">Experience</span></button>
 
 
 </section>
@@ -190,7 +190,6 @@
 
     
 </main>
-
 
 
 <footer >
